further correction of robot position on mobile

--- a/4. (6) joke-teller/less/style.less
+++ b/4. (6) joke-teller/less/style.less
@@ -56,10 +56,10 @@ body {
   body {
     #container {
       background-size: cover;
-      background-position: center center;
+      background-position: center -15vh;
       flex-flow: column nowrap;
       justify-content: flex-end;
-      padding-bottom: 10vh;
+      padding-bottom: 13vh;
     }
   }
 }
